# sspp-typesafe-numericpipeline

./: CMakeLists.txt  LICENSE  README.md  compose-dev.yaml
dockerfiles/: dev-clang.dockerfile
include/: CMakeLists.txt  PU.hpp  SSPP.hpp  SSPP_impl.hpp
src/: CMakeLists.txt  PU.cpp  main.cpp
test/: CMakeLists.txt  SSPP_test.cpp
